--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "description": "rae portfolio website",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js",
+    "postinstall": "./node_modules/bower/bin/bower install"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bower": "0.6.x",
     "express": "^4.13.4",
     "body-parser": "latest",
     "moment": "^2.18.1",
