--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "postinstall": "bower install"
+    "postinstall": "bower cache clean && bower install"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bower": "0.6.x",
+    "bower": "^1.3.2",
     "express": "^4.13.4",
     "body-parser": "latest",
     "moment": "^2.18.1",
